Support residents without email address, show current month data and change pages text content
